Attempt to fix map and twitter feed overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,3 +203,11 @@ div.text-center.p-4 {
 .bg-light {
     background-color: #212E41 !important;
 }
+
+@media (max-width: 767px) {
+    #club-sites {
+        display: none;
+    }
+
+
+}
